# adm-win

./: .gitattributes  .gitignore  Cargo.toml  README.md  ce.txt  crash_err.txt
crates/adm-app/: Cargo.toml  build.rs
crates/adm-app/src/: category.rs  dialogs.rs  engine.rs  gui.rs  lib.rs  options.rs  progress.rs  scheduler.rs  store.rs  tasks.rs  theme.rs
crates/adm-app/tests/: engine.rs
crates/adm-core/: Cargo.toml
crates/adm-core/src/: download.rs  grabber.rs  lib.rs  probe.rs  sidecar.rs
crates/adm-core/tests/: download.rs
extension/: background.js  content.js  manifest.json
packaging/: README.md
packaging/inno/: adm.iss
packaging/native-host/: com.adm.bridge.template.json
tools/icongen/src/: main.rs
