[workspace]
resolver = "2"
members = [
    "crates/adm-core",
    "crates/adm-ipc",
    "crates/adm-app",
    "crates/adm-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["s4rt4 <surat.sarta@gmail.com>"]

# Profil rilis: binary kecil (sesuai sasaran §1 — footprint minimum).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
