[package]
name = "adm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ADM resident app: Win32 GUI + tray + in-process engine + pipe server."

[lib]
name = "adm_app"
path = "src/lib.rs"

[[bin]]
name = "adm-app"
path = "src/main.rs"

[dependencies]
adm-core = { path = "../adm-core" }
adm-ipc = { path = "../adm-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls_Dialogs",
]

[build-dependencies]
embed-resource = "2.5"

[dev-dependencies]
tiny_http = "0.12"
sha2 = "0.10"
tempfile = "3"
