[package]
name = "adm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Portable download engine for ADM (shared Linux + Windows)."

[lib]
name = "adm_core"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tiny_http = "0.12"
sha2 = "0.10"
tempfile = "3"
